js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating/dep-3_FIXTURE.js
globalThis
.
dep3evaluated
=
true
;
